# Module_Swap

./: README.md  pyproject.toml
module_swap/: __init__.py  forms.py  models.py  navigation.py  urls.py  views.py
module_swap/migrations/: 0001_initial.py
module_swap/templates/module_swap/: link_module_inventory.html  link_module_inventory_confirm_delete.html  link_module_inventory_list.html  step1_select.html  step2_bay.html
