[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "module_swap"
version = "1.2.1"
authors = [
  { name="Viktor Kubec", email="Viktor.Kubec@gmail.com" },
]
description = "Netbox plugin for module swapping."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.package-data]
"module_swap" = ["templates/**/*.html"]
